[gd_scene load_steps=13 format=3 uid="uid://cqs7ri0amr2c6"]

[ext_resource type="Script" path="res://Scripts/IvanScript.gd" id="1_6h3k6"]
[ext_resource type="Texture2D" uid="uid://d1hws0muiegxq" path="res://Sprites/Ivan/float.png" id="2_08gj8"]
[ext_resource type="Texture2D" uid="uid://cnw7lfpradhgl" path="res://Sprites/Ivan/charge.png" id="2_48cty"]
[ext_resource type="Texture2D" uid="uid://bnlp6gt5r1htg" path="res://Sprites/Ivan/laser.png" id="3_03dt5"]
[ext_resource type="Texture2D" uid="uid://dmjhet3vba8pl" path="res://Sprites/Ivan/fire.png" id="3_oah6x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48aqh"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mvhmk"]
size = Vector2(16, 64)

[sub_resource type="Animation" id="Animation_46k54"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite root/sprite:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite root/sprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite root/sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_08gj8")]
}

[sub_resource type="Animation" id="Animation_pcfb3"]
resource_name = "charge"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite root/sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_48cty")]
}

[sub_resource type="Animation" id="Animation_4lfvc"]
resource_name = "fire"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite root/sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_oah6x")]
}

[sub_resource type="Animation" id="Animation_3uomy"]
resource_name = "float"
length = 1.5
loop_mode = 1
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite root/sprite:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.125, 0, 0.125, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.75, 1.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite root/sprite:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.75, 1.5)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite root/sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_08gj8")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b3048"]
_data = {
"RESET": SubResource("Animation_46k54"),
"charge": SubResource("Animation_pcfb3"),
"fire": SubResource("Animation_4lfvc"),
"float": SubResource("Animation_3uomy")
}

[node name="Ivan" type="CharacterBody2D"]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_6h3k6")

[node name="move timer" type="Timer" parent="."]
process_callback = 0
wait_time = 1.5
autostart = true

[node name="attack timer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0
one_shot = true
autostart = true

[node name="fire timer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="attack cooldown" type="Timer" parent="."]
process_callback = 0
wait_time = 1.2
one_shot = true

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_48aqh")

[node name="sprite root" type="Node2D" parent="."]

[node name="sprite" type="Sprite2D" parent="sprite root"]
texture = ExtResource("2_08gj8")

[node name="hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 16
monitoring = false
monitorable = false

[node name="collider" type="CollisionShape2D" parent="hitbox"]
position = Vector2(1024, 0)
rotation = 1.5708
scale = Vector2(1, 32)
shape = SubResource("RectangleShape2D_mvhmk")

[node name="sprite" type="Sprite2D" parent="hitbox"]
position = Vector2(1024, 0)
rotation = 1.5708
scale = Vector2(1, 32)
texture = ExtResource("3_03dt5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b3048")
}

[connection signal="timeout" from="move timer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="attack timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="fire timer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="attack cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="current_animation_changed" from="AnimationPlayer" to="." method="_on_animation_player_current_animation_changed"]
